--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav>
         <div class="logo">BCA Portal</div>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/firstsem/firstsem.html">1st Semester</a></li>
-            <li><a href="/secsem/secsem.html" class="active">2nd Semester</a></li>
-            <li><a href="/thrsem/thrsem.html">3nd Semester</a></li>
+            <li><a href="https://rdaweb.github.io/BCAstudyishere/">Home</a></li>
+            <li><a href="https://ravindergodd.github.io/firstsem/">1st Semester</a></li>
+            <li><a href="https://ravindergodd.github.io/secsem/" class="active">2nd Semester</a></li>
+            <li><a href="https://ravindergodd.github.io/secsem/">3nd Semester</a></li>
         </ul>
     </nav>
 
