--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="https://rdaweb.github.io/BCAstudyishere/">Home</a></li>
             <li><a href="https://ravindergodd.github.io/firstsem/">1st Semester</a></li>
             <li><a href="https://ravindergodd.github.io/secsem/" class="active">2nd Semester</a></li>
-            <li><a href="https://ravindergodd.github.io/secsem/">3nd Semester</a></li>
+            <li><a href="https://ravindergodd.github.io/thirdsem/">3nd Semester</a></li>
         </ul>
     </nav>
 
